updated some Gradle build settings (debug logging now enabled)